<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background=" #ccddff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="35dp"
        android:text="Filmes Star Wars"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/textButtonlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textButtonlogin"
        android:onClick="login"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textRegister"
        />
    <EditText
        android:id="@+id/password2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"/>

    <Button
        android:id="@+id/textButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textButtonRegister"
        android:onClick="register"
        />

</LinearLayout>